Adds listener to select countries and checking the number of countries

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
        </article> 
       
        <article class="body-card">
-        <h2 class="title-country">Switzerland</h2>
+        <!-- <h2 class="title-country">Switzerland</h2>
         <div class="card" >
           <ul class="list">
             <li class="item-card"><span>Capital:</span>Bern</li>
@@ -69,14 +69,14 @@
             </li>
           </ul> 
                <img class="img-country" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Flag_of_Switzerland_%28Pantone%29.svg/250px-Flag_of_Switzerland_%28Pantone%29.svg.png" alt="Flag Switzerland" max-width="400" >
-      </div>
+      </div> -->
       </article>
       <article class="intro">
         <ul class="list-country" >
-          <li class="list-lang" >Botswana</li>
+          <!-- <li class="list-lang" >Botswana</li>
           <li class="list-lang" >Switzerland</li>
           <li class="list-lang" >Sweden</li>
-          <li class="list-lang" >Swiziland</li>
+          <li class="list-lang" >Swiziland</li> -->
         </ul>
       </article>
      
